--- a/getting_started.qmd
+++ b/getting_started.qmd
@@ -219,7 +219,7 @@ Now we can use the data in `to_plot` that we just pulled in to R to make a plot 
 #| echo: false
 latest_year <- max(to_plot$year)
 
-ggplot(to_plot) +
+plot <- ggplot(to_plot) +
   aes(x = year, y = n_commuters_relative, color = mode_of_transit) +
   geom_line() +
   facet_wrap(
@@ -261,6 +261,24 @@ ggplot(to_plot) +
   )
 ```
 
+::: {.content-visible when-format="html"}
+```{r}
+#| label: pums-data-manip-agg-plot-n_commuters-html
+#| echo: false
+plot
+```
+::: 
+
+::: {.content-visible when-format="pdf"}
+```{r}
+#| label: pums-data-manip-agg-plot-n_commuters-pdf
+#| fig-width: 4.5
+#| fig-height: 7.5
+#| echo: false
+print(plot, vp=grid::viewport(width = 7.5, height = 4.5, angle=90))
+```
+:::
+
 One striking thing is that we can see that after the 2020 Covid pandemic, the number of people working from home jumped to over 500% compared to 2005.
 There was already growth for working from home before then, but there was — understandably — a giant bump there.
 We also saw public transit modes drop in 2021 and then come back up in 2022.
@@ -270,7 +288,7 @@ We also saw public transit modes drop in 2021 and then come back up in 2022.
 #| echo: false
 latest_year <- max(to_plot$year)
 
-to_plot |>
+plot <- to_plot |>
   filter(mode_of_transit != "Worked from home") |>
   ggplot() +
   aes(x = year, y = mean_commute_time, color = mode_of_transit) +
@@ -313,6 +331,25 @@ to_plot |>
     subtitle = "\"Worked from home\" has been removed, since those commutes are all 0."
   )
 ```
+
+
+::: {.content-visible when-format="html"}
+```{r}
+#| label: pums-data-manip-agg-plot-commute_time-html
+#| echo: false
+plot
+```
+::: 
+
+::: {.content-visible when-format="pdf"}
+```{r}
+#| label: pums-data-manip-agg-plot-commute_time-pdf
+#| fig-width: 4.5
+#| fig-height: 7.5
+#| echo: false
+print(plot, vp=grid::viewport(angle=90))
+```
+:::
 
 And we can see how the commuting durations also change, as mean duration in minutes.
 Below we can see that, besides "Other method", all modes of transit seem to be getting longer over time, with commuter rail and bicycles seeing some of the largest increases.
