--- a/advanced_topics.qmd
+++ b/advanced_topics.qmd
@@ -373,9 +373,18 @@ correct_projection <- function(PUMA, crs = "NAD83") {
 
   # Move the bounding box + center of the projection so that
   # Alaska is plotted together
-  proj <- paste0("+proj=aea +lat_1=29.5 +lat_2=45.5 +lat_0=23", 
-                 " +lon_0=-96 +x_0=0 +y_0=0 +ellps=GRS80 ", 
-                 "+towgs84=0,0,0,0,0,0,0 +units=m +no_defs")
+  proj <- paste(
+    "+proj=aea",
+    "+lat_1=29.5",
+    "+lat_2=45.5",
+    "+lat_0=23", 
+    "+lon_0=-96",
+    "+x_0=0",
+    "+y_0=0",
+    "+ellps=GRS80", 
+    "+towgs84=0,0,0,0,0,0,0",
+    "+units=m +no_defs"
+  )
   PUMA_df$geometry <- st_transform(PUMA_df$geometry, crs = proj)
 
   PUMA_df
